@startuml
'https://plantuml.com/class-diagram


interface BookingPersistenceSource {
    +suspend getBookingsBy(companyId: String ...): ServiceResult<List<Booking>>
    +suspend createBooking(booking: Booking): ServiceResult<Booking>
}

interface BookingsRepository {
    +suspend getBookingsBy(companyId: String ...): ServiceResult<List<Booking>>
    +suspend createBooking(booking: Booking): ServiceResult<Booking>
}

interface ApiHelper {
+ suspend getBookingsBy(companyId: String ...): Response<List<Booking>>
+ suspend createBooking(booking: Booking): Response<Booking>
}

BookingPersistenceSource <|--  AndroidBookingSource
BookingsRepository <|--  BookingsRepositoryImpl

class BookingsRepositoryImpl {
    - bookingPersistenceSource: BookingPersistenceSource
    +suspend getBookingsBy(companyId: String ...): ServiceResult<List<Booking>>
    +suspend createBooking(booking: Booking): ServiceResult<Booking>
}

class GetBookings {
    - bookingsRepository: BookingsRepository
    + invoke(companyId: String ...): List<Booking>
}

class AndroidBookingSource {
- apiHelper: ApiHelper
}


@enduml